# kodexa

./: .flake8  .gitignore  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  Simple Example.ipynb  VERSION  azure-pipelines.yml  catalog-info.yaml  cloudSchema.json  environment.yml  generate-antlr4.sh  generate-client-stub.sh  generate-sources.sh  generateSwaggerClient.sh  generate_datamodel.sh  get-antlr.sh  index.html  kodexa-swagger.json  kodexa.json  migration_script.sql  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  swagger-config.json  test_migration.py  tsconfig.json
.cursor/: config.json
.github/linters/: .flake8
.github/workflows/: codeql-analysis.yml  codeql.yml  develop.yml  documentation-deploy.yml  feature.yml  linter.yml  main.yml  master.yml  publish.yml  python-build.yml
.ipynb_checkpoints/: Simple Example-checkpoint.ipynb
.openapi-generator/: FILES
assistant/: assistant.html  index.html
cli/: cli.html  documentation.html  index.html
cloud/: index.html  kodexa.html
connectors/: connectors.html  index.html
docs/: AccessToken.md  AccessTokenDetails.md  AccessTokensApi.md  AccountApi.md  Action.md  ActionAllOf.md  ActionsApi.md  Assistant.md  AssistantDefinition.md  AssistantEvent.md  AssistantEventAllOf.md  AssistantImplementation.md  AssistantMetadata.md  AssistantSchedule.md  AssistantSubscription.md  AssistantTaxonomy.md  AssistantsApi.md  AuditEvent.md  Avatar.md  BaseEvent.md  BulkDelete.md  BulkLock.md  CellValidationMessage.md  Channel.md  ChannelMetadata.md  ChannelsApi.md  CloudActionSession.md  CloudActionSessionAllOf.md  CloudAssistant.md  CloudAssistantPipeline.md  CloudAssistantResponse.md  CloudAssistantSession.md  CloudAssistantSessionAllOf.md  CloudConnector.md  CloudExecution.md  CloudExecutionEvent.md  CloudExecutionStep.md  CloudPipeline.md  CloudPipelineSession.md  CloudPipelineSessionAllOf.md  (+145 more)
docs/cli/: help-output.txt  introduction.md  kodexa-cli.md
docs/client/: assistants.ipynb  configuration.md  first-steps.ipynb  index.md  installation.md  organizations.ipynb  projects.ipynb  working-with-stores.ipynb
docs/documents/: connectors.md  first-steps.ipynb  first-steps.md  overview.md  selectors.md  working-with-content.ipynb  working-with-content.md
docs/kodexa/: introduction.md
docs/kodexa-client/: api.md  configuration.md
docs/kodexa-document/: index.md  selectors.md
docs/kodexa_client/: api.md  index.md
docs/kodexa_document/: index.md  selectors.md
extractors/: extractors.html
kodexa/: __init__.py  documentation.md
kodexa_cloud/: __init__.py  api_client.py  cloud.py  configuration.py  model.py  rest.py
mixins/: core.html  navigation.html  registry.html  spatial.html  util.html
model/: document.html  document_families.html  index.html  model.html  persistence.html
pipeline/: pipeline.html
resources/: KodexaSelector.g4  api-docs.yaml  api.yaml  document.yaml  schema.md  selector.g4
selectors/: core.html  index.html
sinks/: inmemory.html  local.html
steps/: common.html  index.html
stores/: index.html  local.html  stores.html
taxonomy/: index.html  taxonomy.html
test_documents/: CityOfRaleigh_ocr.kdxa  bank-statement.kddb  city_of_raleigh_ners.csv  event-2.json  example-taxonomy.json  fax.kdxa  fax2-conversion.kddb  fax2.kddb  fax2.kdxa  multiline_text.txt  news-tagged.kdxa  news.html  news.kdxa  tag_test.kddb  tagging_issue.kdxa
test_snapshots/: basic_store_tagged_data1.json  basic_store_tagged_data2.json  test_hello_txt.json  test_tag_nodes_between.json
testing/: index.html  test_components.html  test_utils.html
tests/: basic_assistant_tests.py  basic_connector_registry.py  basic_document_test.py  basic_document_tests.py  basic_exception_test.py  basic_exception_tests.py  basic_extension_pack_tests.py  basic_kodexa_test.py  basic_pipeline_test.py  basic_pipeline_tests.py  basic_step_tests.py  basic_store_tests.py  basic_tag_test.py  basic_text_test.py  basic_text_tests.py  basic_to_yaml_test.py  client_tests.py  conditional_tests.py  document_taxon_validation_test.py  document_taxon_validation_tests.py  export_test.py  kodexa-action.yml  kodexa-assistant.yml  model_insight_tests.py  node_selectors_test.py  object_test.py  object_tests.py  objects_tests.py  parameter_tests.py  pipelines_tests.py  platform_token_test.py  platform_token_tests.py  profile_test.py  profile_tests.py  render_tests.py  storage_tests.py  store_tests.py  tagging_test.py  tagging_tests.py  taxonomy_test.py  (+2 more)
training/: index.html
workflow/: index.html  workflow.html
(+486 files in other folders)
