[tool.poetry]
name = "kodexa"
version = "7.4.0"
description = "Python SDK for the Kodexa Platform"
authors = ["Austin Redenbaugh <austin@kodexa.com>", "Philip Dodds <philip@kodexa.com>", "Romar Cablao <rcablao@kodexa.com>", "Amadea Paula Dodds <amadeapaula@kodexa.com>"]
readme = "README.md"

packages = [
    { include = "kodexa" }
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    '''License :: OSI Approved :: Apache Software License''', # noqa
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = "^2.28.1"
msgpack = "^1.0.6"
urllib3 = "^2.0.0"
ply = ">=3.11,<4.0"
pyyaml = "^6.0"
deepdiff = "^8.0.1"
appdirs = "^1.4.4"
python-dateutil = "^2.8.2"
better-exceptions = "^0.3.3"
pyfunctional = "1.5.0"
pydantic = "^2.5.3"
pydantic-yaml = "^1.0.0"
semver = "^3.0.1"
chevron = "^0.14.0"
addict = "^2.4.0"
simpleeval = "^1.0.0"
certifi = "^2024.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-runner = "^6.0.0"
mypy = "^1.10.0"
flake8 = "^7.0.0"
pandas = "^2.2.3"
setuptools = "^75.1.0"
black = ">=23.7,<25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
